# random-student-fork

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yaml  submission.yaml  trigger.yaml  unchanged_ci_config.yaml
adviser/: CMakeLists.txt  adviser.cpp  adviser.h  tests.cpp
oracle/: CMakeLists.txt  oracle.cpp  oracle.h  tests.cpp
